# Bifrost

./: .clang-format  .gitignore  README.md
.github/workflows/: cmake-multi-platform.yml
Draw/: 架构图.drawio  需求分析.drawio
draw/: 架构图.drawio  需求分析.drawio
worker/: .clang-format  .gitignore  CMakeLists.txt  build.sh
worker/conf/: README.md  config.json  player_config.json  publisher_config.json
worker/include/bifrost/: data_producer.h  experiment_data.h  experiment_manager.h  player.h  publisher.h  quic_clock_adapter.h
worker/include/bifrost/bifrost_send_algorithm/: bifrost_pacer.h  bifrost_send_algorithm.h  bifrost_send_algorithm_interface.h  bifrost_send_algorithm_manager.h  quic_send_algorithm_adapter.h  tcc_client.h  webrtc_clock_adapter.h
worker/include/bifrost/experiment_manager/: experiment_data.h  experiment_manager.h  fake_data_producer.h  h264_file_data_producer.h  video_file_data_producer.h
worker/include/io/: io_udp.h  port_manager.h  timer.h  udp_socket.h  uv_loop.h
worker/include/rtc/: client_router.h  nack.h  payload_descriptor.h  rtc_server.h  rtcp_compound_packet.h  rtcp_feedback.h  rtcp_feedback_item.h  rtcp_feedback_rtp.h  rtcp_nack.h  rtcp_packet.h  rtcp_quic_feedback.h  rtcp_rr.h  rtcp_sr.h  rtcp_tcc.h  rtp_packet.h  sequence_manager.h  server_router.h  tcc_client.h  tcc_client.hpp  tcc_server.h  tcc_server.hpp  transport.h  udp_router.h
worker/include/utils/: common.h  setting.h  utils.h
worker/src/: main.cpp
worker/src/bifrost/: data_producer.cpp  experiment_manager.cpp  player.cpp  publisher.cpp
worker/src/bifrost/bifrost_send_algorithm/: bifrost_pacer.cpp  bifrost_send_algorithm.cpp  bifrost_send_algorithm_manager.cpp  quic_send_algorithm_adapter.cpp  tcc_client.cpp  tcc_server.cpp
worker/src/bifrost/experiment_manager/: experiment_manager.cpp  fake_data_producer.cpp  h264_file_data_producer.cpp
worker/src/bifrost/experiment_manager/ns3-interface/: README.md  setup.sh
worker/src/bifrost/experiment_manager/ns3-interface/endpoint/: Dockerfile  endpoint-run.sh
worker/src/bifrost/experiment_manager/ns3-interface/endpoint/proxy/: CMakeLists.txt  build_proxy.sh  main.cpp  nohup.out  ns3_proxy.cpp  ns3_proxy.h  rtc_header.h
worker/src/bifrost/experiment_manager/ns3-interface/endpoint/proxy/io/: udp_socket.cpp  udp_socket.h  uv_run.h
worker/src/bifrost/experiment_manager/ns3-interface/endpoint/proxy/libuv/: CMakeLists.txt  CONTRIBUTING.md  LINKS.md  MAINTAINERS.md  README.md  SUPPORTED_PLATFORMS.md
worker/src/bifrost/experiment_manager/ns3-interface/endpoint/proxy/libuv/cmake-toolchains/: cross-mingw32.cmake
worker/src/bifrost/experiment_manager/ns3-interface/endpoint/proxy/libuv/docs/code/: CMakeLists.txt
worker/src/bifrost/experiment_manager/ns3-interface/endpoint/proxy/libuv/docs/src/: conf.py
worker/src/bifrost/experiment_manager/ns3-interface/endpoint/proxy/libuv/docs/src/sphinx-plugins/: manpage.py
worker/src/bifrost/experiment_manager/ns3-interface/endpoint/proxy/libuv/include/uv/: uv_errno.h
worker/src/bifrost/experiment_manager/ns3-interface/endpoint/proxy/libuv/tools/: make_dist_html.py
worker/src/bifrost/experiment_manager/ns3-interface/src/: Dockerfile  bifrost-run.sh  sim.cc
worker/src/bifrost/experiment_manager/ns3-interface/src/bifrost/: README.md  wscript
worker/src/bifrost/experiment_manager/ns3-interface/src/bifrost/TopologyInterface/: FileRecordRedeploy.cpp  FileRecordRedeploy.h  TopologyBlackHole.cpp  TopologyBlackHole.h  TopologyBurstUserLTE.cpp  TopologyBurstUserLTE.h  TopologyInterface.h  TopologySimpleLTE.cpp  TopologySimpleLTE.h  TopologyWifiModule.cpp  TopologyWifiModule.h
worker/src/bifrost/experiment_manager/ns3-interface/src/bifrost/TopologyInterface/ErrorModel/mix-error/: mix-error.cpp  mix-error.h
worker/src/bifrost/experiment_manager/ns3-interface/src/bifrost/TopologyInterface/ErrorModel/user-uplink/: user-uplink-congestion.cpp  user-uplink-congestion.h
worker/src/bifrost/experiment_manager/ns3-interface/src/bifrost/examples/: BifrostExample.cpp  wscript
worker/src/bifrost/experiment_manager/ns3-interface/src/bifrost/helper/: BifrostTapNetDeviceHelper.cpp  BifrostTapNetDeviceHelper.h
worker/src/io/: port_manager.cpp  timer.cpp  udp_socket.cpp  uv_loop.cpp  uv_timer.cpp
worker/src/rtc/: client_router.cpp  nack.cpp  payload_descriptor.cpp  rtc_server.cpp  rtcp_compound_packet.cpp  rtcp_feedback.cpp  rtcp_feedback_rtp.cpp  rtcp_nack.cpp  rtcp_packet.cpp  rtcp_quic_feedback.cpp  rtcp_rr.cpp  rtcp_sr.cpp  rtcp_tcc.cpp  rtp_packet.cpp  sequence_manager.cpp  server_router.cpp  tcc_client.cpp  tcc_server.cpp  transport.cpp  udp_router.cpp
worker/src/utils/: setting.cpp  utils.cpp
